margin + spacing issues fixed

--- a/src/app/professor-page-entry/professor-page-entry.component.css
+++ b/src/app/professor-page-entry/professor-page-entry.component.css
@@ -15,15 +15,16 @@
   display: flex;
 }
 
-
-
-.link {
-  color: #fff;
-  font-family: Roboto, sans-serif;
-  font-size: 17px;
-  font-weight: 400;
-  text-decoration: none;
+.footer {
+  height: 10vh;
+  background-color: #6d1f22;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  display: flex;
 }
+
+
 
 .text-block {
   color: #fff;
@@ -56,6 +57,8 @@
 }
 
 .dynamicprofcontent {
+  grid-column-gap: 25px;
+  grid-row-gap: 25px;
   grid-template-rows: auto auto auto auto;
   grid-template-columns: .5fr 1fr;
 }
@@ -66,13 +69,13 @@
 
 .contentwrapper {
   padding-bottom: 0;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .professor-image.card {
   width: 100%;
-  height: 700px;
+  height: 850px;
  background-image: url('https://www.bc.edu/content/bc-web/schools/mcas/departments/theology/people/faculty-directory/jeremy-wilkins/_jcr_content/profileImage.img.png');
 
   background-position: 50%;
